# Ourself.io-Website

./: .gitignore  README.md  pyproject.toml
website/: mkdocs.yml
website/docs/: index.md
website/docs/documentation/: control.md  index.md  installation.md  worlds.md
